--- a/src/style.css
+++ b/src/style.css
@@ -13,5 +13,14 @@
 }
 
 body{
-padding-top:60px;
+ @apply bg-light pt-20
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type=number]{
+  -moz-appearance: textfield;
 }
